[metadata]
version = 0.0.2

name = xurl
url = https://github.com/aasmpro/xurl
download_url = https://pypi.org/project/xurl/
author = Abolfazl Amiri
author_email = aasmpro@gmail.com
license = GPLv3+
description = extract urls from html files
long_description = file:readme.md
long_description_content_type = text/markdown
keywords = url extract html tag webpage
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
include_package_data = true
install_requires =
    requests
python_requires = >=3.6
py_modules =
    xurl

[options.entry_points]
console_scripts=
    xurl = xurl:main
