[metadata]
name = xurl
version = 0.0.4
description = extract urls from html files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aasmpro/xurl
download_url = https://pypi.org/project/xurl/
author = Abolfazl Amiri
author_email = aa.smpro@gmail.com
license = MIT
keywords = url extract html tag webpage
classifiers =
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
include_package_data = true
install_requires =
    requests
python_requires = >=3.5
py_modules =
    xurl

[options.entry_points]
console_scripts=
    xurl = xurl:main